# syncron

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml
.devcontainer/: docker-compose.yml
.devcontainer/init-scripts/: init.sql
.github/workflows/: rust.yml
init-scripts/: init.sql
src/: bootstrap.rs  config.rs  cron.rs  daemon.rs  env.yml  main.rs  object_plan.txt
src/adapter/client/: http_tests.rs  mod.rs
src/entities/: artefact.rs  backup.rs  backup_test.rs  backup_tests.rs  content.rs  content_tests.rs  mod.rs
src/entity/: content.rs  content_tests.rs  mod.rs
src/iofile/: iofile.rs  mod.rs
src/repository/: mod.rs  snapshot_repository.rs
src/service/: file.rs  mod.rs  snapshot.rs  snapshot_tests.rs  snapshoterr.rs  storage.rs
src/services/: mod.rs  snapshot.rs  snapshot_test.rs
src/usecase/: backup.rs  mod.rs
