[package]
name = "syncron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json","blocking"] }
serde = { version = "1.0", features = ["derive"]  }
serde_json = "1.0"
async-std = "1.8"
sha256 = "1.4.0"
mockito = "1.1.0"
serde_derive = "1.0.188"
log = "0.4.20"
postgres = "0.19.7"
tokio-postgres = "0.7.10"
ctrlc = "3.4.1"
serde_yaml = "0.9.25"
r2d2_postgres = "0.18.1"
dotenv = "0.15.0"
